--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,8 @@
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
-        <module>hello</module>
+        <module>micro-user</module>
+        <module>micro-movie</module>
     </modules>
 
     <parent>
