--- a/micro-eureka-ha/micro-eureka-ha1/pom.xml
+++ b/micro-eureka-ha/micro-eureka-ha1/pom.xml
@@ -3,19 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>icloud</artifactId>
+        <artifactId>micro-eureka-ha</artifactId>
         <groupId>org.yann</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>micro-movie</artifactId>
+    <artifactId>micro-eureka-ha1</artifactId>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-        </dependency>
-    </dependencies>
 
 </project>
