--- a/micro-eureka-ha/pom.xml
+++ b/micro-eureka-ha/pom.xml
@@ -9,12 +9,17 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>micro-movie</artifactId>
+    <artifactId>micro-eureka-ha</artifactId>
+    <packaging>pom</packaging>
+    <modules>
+        <module>micro-eureka-ha0</module>
+        <module>micro-eureka-ha1</module>
+    </modules>
 
     <dependencies>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+            <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
         </dependency>
     </dependencies>
 
