--- a/micro-movie/src/main/resources/application.yml
+++ b/micro-movie/src/main/resources/application.yml
@@ -1,5 +1,16 @@
 server:
-  port: 18001
+  port: 18011
 
 logging:
   root: DEBUG
+
+spring:
+  application:
+    name: micro-movie
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:18000/eureka/
+  instance:
+    prefer-ip-address: true
