--- a/micro-user/pom.xml
+++ b/micro-user/pom.xml
@@ -11,5 +11,12 @@
 
     <artifactId>micro-user</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+    </dependencies>
+
 
 </project>
