--- a/micro-movie/micro-movie-0/pom.xml
+++ b/micro-movie/micro-movie-0/pom.xml
@@ -3,19 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>icloud</artifactId>
+        <artifactId>micro-movie</artifactId>
         <groupId>org.yann</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>micro-user</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>micro-user-0</module>
-        <module>micro-user-1</module>
-        <module>micro-user-auth</module>
-    </modules>
+    <artifactId>micro-movie-0</artifactId>
 
     <dependencies>
         <dependency>
@@ -23,6 +17,5 @@
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
     </dependencies>
-
 
 </project>
