--- a/micro-movie/micro-movie-ribbon-custom/pom.xml
+++ b/micro-movie/micro-movie-ribbon-custom/pom.xml
@@ -3,26 +3,24 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>icloud</artifactId>
+        <artifactId>micro-movie</artifactId>
         <groupId>org.yann</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>micro-user</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>micro-user-0</module>
-        <module>micro-user-1</module>
-        <module>micro-user-auth</module>
-    </modules>
+    <artifactId>micro-movie-ribbon-custom</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
+        <!-- ribbon -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
+        </dependency>
     </dependencies>
-
 
 </project>
