--- a/config/config-client-refresh/pom.xml
+++ b/config/config-client-refresh/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>config-client</artifactId>
+    <artifactId>config-client-refresh</artifactId>
 
     <dependencies>
         <dependency>
@@ -25,6 +25,5 @@
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
     </dependencies>
-
 
 </project>
