--- a/config/pom.xml
+++ b/config/pom.xml
@@ -12,8 +12,14 @@
     <artifactId>config</artifactId>
     <packaging>pom</packaging>
     <modules>
-        <module>config-client</module>
         <module>config-server</module>
+        <module>config-server-encryption</module>
+        <module>config-server-encryption-rsa</module>
+        <module>config-client-refresh</module>
+        <module>config-server-eureka</module>
+        <module>config-client-eureka</module>
+        <module>config-server-auth</module>
+        <module>config-client</module>
     </modules>
 
 </project>
